--- a/해운대축제페이지/index.html
+++ b/해운대축제페이지/index.html
@@ -66,7 +66,7 @@
                                 <div class="nb" onclick="openmodal()">[공지] 2019 해운대라꼬 축제</div>
                             </li>
                             <li>
-                                <div class="nb" onclick="openmodal()">[공지 해운대라꼬 축제 오시는길.</div>
+                                <div class="nb" onclick="openmodal()">[공지  2018 해운대라꼬 축제.</div>
                             </li>
                             <li>
                                 <div class="nb" onclick="openmodal()">[공지] 2017 해운대라꼬 축제.</div>
